Glix Fix Mobile
- Added playsinline to video for autoplay
- Tried fixing the programs disapearing in android
- Fixed the arrows being wrong way after clicked
- Centered the contact Us image on mobile

Other Bugs
-------------

Found a bug that the screen is not responsive below 400px.

--- a/css/cntcus.css
+++ b/css/cntcus.css
@@ -3,7 +3,6 @@
 .imgban {
     background-image: url("../res/images/cntusimg.png");
     height: min(calc(70vw), 600px);    
-    background-position-x: center;
 }
 
 
