--- a/css/home.css
+++ b/css/home.css
@@ -122,15 +122,6 @@
 
     padding-bottom: 150px;
 
-    /* background:  */
-    /* linear-gradient(to bottom right,transparent 50%,#2B2B2B 0) bottom right/70px 70px no-repeat,
-                linear-gradient(to bottom right,transparent 50%,#6D6D6D 0) bottom right/140px 140px no-repeat,
-                linear-gradient(to bottom right,transparent 50%,#999 0) bottom right/210px 210px no-repeat,
-
-                linear-gradient(to top left,transparent 50%,#2B2B2B 0) top left/70px 70px no-repeat,
-                linear-gradient(to top left,transparent 50%,#6D6D6D 0) top left/140px 140px no-repeat,
-                linear-gradient(to top left,transparent 50%,#999 0) top left/210px 210px no-repeat, */
-                /* var(--maincol3); */
 }
 
 .bcgrnddiv {
