--- a/css/mobile_screen.css
+++ b/css/mobile_screen.css
@@ -160,4 +160,10 @@
     .noi h3 {
       padding: 0;
   }
+
+  .imgban {
+    background-position-x: 89%;
+  }
+
+  
   }
